# Obscura-Match

./: .gitignore  Anchor.toml  Cargo.toml  README.md
app/: .env.development  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
app/playwright/: admin.spec.ts  auction.spec.ts  compliance.spec.ts  landing.spec.ts  navigation.spec.ts  terminal.spec.ts
app/src/: App.tsx
app/src/components/: AuctionTimer.tsx  BalanceDisplay.tsx  GlassCard.tsx  Nav.tsx  PermissionMatrix.tsx  TransactionTimeline.tsx  WalletButton.tsx
app/src/lib/: auction.ts  crank.ts  magicblock.ts  permissions.ts
app/src/pages/: AdminOpsView.tsx  AuctionRoom.tsx  ComplianceView.tsx  LandingPage.tsx  TraderTerminal.tsx
app/src/store/: useAppStore.ts
app/src/styles/: index.css
app/src/test/: handlers.ts  polyfill.ts  setup.ts
app/src/test/components/: GlassCard.test.tsx
app/src/test/integration/: auction-lifecycle.test.ts  magicblock.test.ts
app/src/test/unit/: auction.test.ts  crank.test.ts  permissions.test.ts  useAppStore.test.ts
programs/obscura-match/: Cargo.toml
programs/obscura-match/src/: lib.rs  obscura_match-keypair.json
