[workspace]
members = ["programs/obscura-match"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "thin"
opt-level = 3
incremental = true

[profile.release.build-override]
opt-level = 3
incremental = true

[workspace.metadata.anchor]
cluster = "devnet"
wallet = "~/.config/solana/id.json"

[workspace.metadata.anchor.programs.devnet]
obscura_match = "OBSC1MatchXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
