[package]
name = "obscura-match"
version = "0.1.0"
description = "Obscura Match v2 — Confidential sealed-bid OTC crossing engine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obscura_match"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang    = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl     = { version = "0.30.1", features = ["token"] }
spl-token      = { version = "4.0", features = ["no-entrypoint"] }
# MagicBlock PER SDK — provides delegation, permission, and ephemeral macros
ephemeral-rollups-sdk = { version = "0.4.11", features = ["cpi"] }
